[gd_scene load_steps=9 format=3 uid="uid://c376y7yly2lf"]

[ext_resource type="Script" path="res://modules/general_setting_panel/src/main/GSP_GeneralSettingPanel/GSP_GeneralSettingPanel.gd" id="1_sfm35"]
[ext_resource type="PackedScene" uid="uid://ds3ocayptqvsh" path="res://modules/general_setting_panel/src/main/GSP_TabButton/GSP_TabButton.tscn" id="2_h2src"]
[ext_resource type="PackedScene" uid="uid://dyc86wv3xfqym" path="res://modules/general_setting_panel/src/main/GSP_Page/instances/GSP_PageGameplay/GSP_PageGameplay.tscn" id="3_iwww2"]
[ext_resource type="PackedScene" uid="uid://dn5785x2syat7" path="res://modules/general_setting_panel/src/main/GSP_Page/instances/GSP_PageInput/GSP_PageInput.tscn" id="4_yy2x2"]
[ext_resource type="PackedScene" uid="uid://c5pi7p60x4q5w" path="res://modules/general_setting_panel/src/main/GSP_Page/instances/GSP_PageDisplay/GSP_PageDisplay.tscn" id="5_bl7ns"]
[ext_resource type="PackedScene" uid="uid://c3eb8i5mehfkv" path="res://modules/general_setting_panel/src/main/GSP_Page/instances/GSP_PageAudio/GSP_PageAudio.tscn" id="6_hnsup"]
[ext_resource type="PackedScene" uid="uid://1mpqs8h8p08w" path="res://modules/general_setting_panel/src/main/GSP_Page/instances/GSP_PageOther/GSP_PageOther.tscn" id="7_d8aaw"]

[sub_resource type="LabelSettings" id="LabelSettings_yrtqo"]
font_size = 20

[node name="GSP_GeneralSettingPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sfm35")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "@s_Settings"
label_settings = SubResource("LabelSettings_yrtqo")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TabButtonsList" type="VBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GSP_TabButton_Game" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/TabButtonsList" instance=ExtResource("2_h2src")]
unique_name_in_owner = true
layout_mode = 2
text = "@s_Gameplay"
page_node_path = NodePath("../../PageContainer/GSP_PageGameplay")

[node name="GSP_TabButton_Input" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/TabButtonsList" instance=ExtResource("2_h2src")]
unique_name_in_owner = true
layout_mode = 2
text = "@s_Input"
page_node_path = NodePath("../../PageContainer/GSP_PageInput")

[node name="GSP_TabButton_Display" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/TabButtonsList" instance=ExtResource("2_h2src")]
unique_name_in_owner = true
layout_mode = 2
text = "@s_Display"
page_node_path = NodePath("../../PageContainer/GSP_PageDisplay")

[node name="GSP_TabButton_Audio" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/TabButtonsList" instance=ExtResource("2_h2src")]
unique_name_in_owner = true
layout_mode = 2
text = "@s_Audio"
page_node_path = NodePath("../../PageContainer/GSP_PageAudio")

[node name="GSP_TabButton_Other" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/TabButtonsList" instance=ExtResource("2_h2src")]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "123"
text = "@s_Other"
page_node_path = NodePath("../../PageContainer/GSP_PageOther")

[node name="VSeparator" type="VSeparator" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PageContainer" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="GSP_PageGameplay" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/PageContainer" instance=ExtResource("3_iwww2")]
layout_mode = 2

[node name="GSP_PageInput" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/PageContainer" instance=ExtResource("4_yy2x2")]
visible = false
layout_mode = 2

[node name="GSP_PageDisplay" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/PageContainer" instance=ExtResource("5_bl7ns")]
visible = false
layout_mode = 2

[node name="GSP_PageAudio" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/PageContainer" instance=ExtResource("6_hnsup")]
visible = false
layout_mode = 2

[node name="GSP_PageOther" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/PageContainer" instance=ExtResource("7_d8aaw")]
visible = false
layout_mode = 2
